5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4271/executions/1590_825.log
== SUBMITION (2019-04-07 22:28:55) 
-- CODE:
raio = float(input("digite o raio: "))

from math import *

area = pi * raio ** 2
volume = 4 / 3 * pi * raio ** 3 

print("%.3f" % area)
print("%.3f" % volume)
e seu cigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

-- EXECUTION TIME:
0.261616
-- ERROR:
  File "/home/codebench/codes/1590/825/main.py", line 10
    e seu cigo aos poucos.
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:29:05) 
-- CODE:
raio = float(input("digite o raio: "))

from math import *

area = pi * raio ** 2
volume = 4 / 3 * pi * raio ** 3 

print("%.3f" % area)
print("%.3f" % volume)
e seu cigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

-- ERROR:
File "XXXX", line 10
    e seu cigo aos poucos.
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:31:28) 
-- CODE:
raio = float(input("digite o raio: "))

from math import *

area = pi * raio ** 2
volume = 4 / 3 * pi * raio ** 3 

print("%.3f" % area)
print("%.3f" % volume)
e seu cigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

-- ERROR:
File "XXXX", line 10
    e seu cigo aos poucos.
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 22:31:42) 
-- CODE:
raio = float(input("digite o raio: "))

from math import *

area = pi * raio ** 2
volume = 4 / 3 * pi * raio ** 3 

print("%.3f" % area)
print("%.3f" % volume)
e seu cigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

-- EXECUTION TIME:
0.206855
-- ERROR:
  File "/home/codebench/codes/1590/825/main.py", line 10
    e seu cigo aos poucos.
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:31:50) 
-- CODE:
raio = float(input("digite o raio: "))

from math import *

area = pi * raio ** 2
volume = 4 / 3 * pi * raio ** 3 

print("%.3f" % area)
print("%.3f" % volume)
e seu cigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

-- ERROR:
File "XXXX", line 10
    e seu cigo aos poucos.
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 22:33:00) 
-- CODE:
raio = float(input("digite o raio: "))

from math import *

area = pi * raio ** 2
volume = 4 / 3 * pi * raio ** 3 

print("%.3f" % area)
print("%.3f" % volume)
e 
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

-- EXECUTION TIME:
0.200181
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.704
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.076
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
